@@ -1,5 +1,10 @@
 
 
+                CHANGES IN party VERSION 1.3-2 (2019-03-01)
+
+    o    move ExpectCovar and ExpectCovarInfluence classes from coin to
+         party
+
                 CHANGES IN party VERSION 1.3-1 (2018-08-08)
 
     o    varimpAUC() now calls varImp::varImpAUC()
